# networth_projection

./: .gitignore  CMakeLists.txt  README.md
cmake/: yaml-cpp.cmake
conf/: data.yaml  directories.yml  logger.yml
conf/input/: application_selector.yml  defaults.yml  mortgage.yml  networth.yml
node/: package-lock.json  producer.js
scripts/: update_data.py
scripts/data_manipulation/: generate_complex_database.py  generate_database.py  update_data.py
scripts/devops/: build.py
src/: NetWorth.cpp  NetWorth.hpp  main.cpp
src/adapter/: CMakeLists.txt  str_adapter.cpp
src/adapter/include/: computation_adapter.hpp  str_adapter.hpp
src/comm/: kafka_manager.cpp  kafka_producer.cpp  kafka_producer.hpp  kafka_wrapper.hpp
src/db_manager/: CMakeLists.txt  strategy_db.cpp
src/db_manager/include/: strategy_db.hpp
src/files/: file_manager.cpp  file_manager.hpp
src/interfaces/: CMakeLists.txt  activation.cpp
src/interfaces/activation/: activation.cpp
src/interfaces/include/: activation.hpp
src/io/: CMakeLists.txt  continuous_input.cpp  continuous_input.hpp  data_adapter.cpp  data_adapter.hpp  input_handler.cpp  input_handler.hpp
src/io/cmd/: CMakeLists.txt  dynamic_io.cpp  static_io.cpp  user_io.cpp
src/io/cmd/include/: cmd_common.hpp  input_factory.hpp
src/io/common/: CMakeLists.txt  appl_type_converter.cpp  conf_resolver.cpp  data_adapter.cpp
src/io/common/adapter/: data_adapter.cpp
src/io/common/include/: appl_conf_types.hpp  conf_input_types.hpp  conf_resolver.hpp  data_adapter.hpp  input_types_cfg.hpp
src/io/file/: CMakeLists.txt  file_generator.cpp  logger.cpp  yml_prsr.cpp
src/io/file/include/: file_generator.hpp  logger.hpp  logger_v1.hpp  logger_v2.hpp  logger_v3.hpp  yml_prsr.hpp
src/io/ipc/: CMakeLists.txt
src/io/ipc/kafka/: CMakeLists.txt  kafka.cpp
src/io/ipc/kafka/include/: kafka.hpp  kafka_consumer.hpp  kafka_producer.hpp
src/lib/: CMakeLists.txt
src/lib/datetime/: CMakeLists.txt  datetime.cpp
src/lib/datetime/include/: datetime.hpp
src/lib/kafka/: CMakeLists.txt  kafka.cpp  kafka_consumer.cpp  kafka_producer.cpp
src/lib/kafka/include/: kafka.hpp  kafka_consumer.hpp  kafka_manager.hpp
src/lib/utils/: CMakeLists.txt  file_manager.cpp  utils.cpp
src/lib/utils/include/: utils.hpp
src/mortgage/: CMakeLists.txt  data_adapter.cpp  mortgage.cpp  mortgage.hpp
src/mortgage/include/: mortgage.hpp
src/networth/: CMakeLists.txt  NetWorth.cpp  NetWorth.hpp  data_adapter.cpp  data_adapter.hpp  net_worth.cpp  net_worth.hpp  networth.cpp  networth.hpp
src/networth/include/: networth.hpp
src/portfolio/: CMakeLists.txt  data_adapter.cpp  portfolio.cpp  portfolio.hpp  portfolio_appl.cpp  portfolio_cfg.cpp  portfolio_db.cpp  portfolio_file.cpp
src/portfolio/include/: generator_portfolio.hpp  investment.hpp  portfolio.hpp  portfolio_appl.hpp  portfolio_cfg.hpp  portfolio_db.hpp  portfolio_file.hpp  portfolio_logger.hpp
src/utils/: utils.cpp  utils.hpp
web/templates/: index.html
web/ui/: index.html
web/ui/js/: script.js
web/ui/styles/: styles.css
web/wasm/: index.html  input.cpp  output.js  output.wasm  script.js
